src/test/deca/syntax/valid/lexer/sans-objet.deca
// Description:
//    Programme sans objet
//
// Resultats:
//    resultat de x
//
// Historique:
//    cree le 01/01/2022

{
    int x;
    x = readInt();
    println(0.5*(x*x));
}
