src/test/deca/syntax/invalid/manque_declaration.deca
// Manque la déclaration de c

// Date: 20.01.2022

{

    int a , b;
    c = b * a;
    return c;

}